Deploy on AWS ok with cpu

--- a/app/log.ini
+++ b/app/log.ini
@@ -18,7 +18,7 @@ format=[%(asctime)s] %(levelname)s [%(process)d-%(thread)d] %(message)s
 [handler_logfile]
 class=handlers.RotatingFileHandler
 level=INFO
-args=('app/log.log','a')
+args=('log/log.log','a')
 formatter=logformatter
 
 [handler_logconsole]
