Frontend working with docker-compose

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -37,7 +37,7 @@ RUN python3 -m pip --no-cache-dir install --upgrade pip && \
     python3 --version && \
     pip3 --version
 
-## For GPU version uncomment next RUN statement
+## For GPU version uncomment the next RUN statement
 # RUN pip3 --timeout=300 --no-cache-dir install torch==1.10.0+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html
 
 RUN pip3 --timeout=300 --no-cache-dir install torch==1.10.0+cpu -f https://download.pytorch.org/whl/cpu/torch_stable.html
@@ -55,8 +55,9 @@ WORKDIR /app/
 ENV PYTHONPATH=/app
 RUN ls -lah /app/*
 
-COPY ./start.sh /start.sh
-RUN chmod +x /start.sh
+# COPY ./start.sh /start.sh
+# RUN chmod +x /start.sh
 
-EXPOSE 80
-CMD ["/start.sh"]
+EXPOSE 8080
+# CMD ["/start.sh"]
+CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"]
