--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-## For CPU version uncomment next RUN statement
+## For GPU version uncomment next RUN statement
 # FROM nvidia/cuda:11.6.0-runtime-ubuntu20.04
 
 FROM ubuntu:20.04
@@ -21,23 +21,12 @@ RUN conda --version
 RUN apt-get update && \
     apt-get install --no-install-recommends -y curl
 
-# ENV CONDA_AUTO_UPDATE_CONDA=false \
-#     PATH=/opt/miniconda/bin:$PATH
-
-
-
-# RUN curl -sLo ~/miniconda.sh https://repo.anaconda.com/miniconda/Miniconda3-py38_4.9.2-Linux-x86_64.sh \
-#     && chmod +x ~/miniconda.sh \
-#     && ~/miniconda.sh -b -p /opt/miniconda \
-#     && rm ~/miniconda.sh \
-#     && sed -i "$ a PATH=/opt/miniconda/bin:\$PATH" /etc/environment
-
 # Installing python dependencies
 RUN python3 -m pip --no-cache-dir install --upgrade pip && \
     python3 --version && \
     pip3 --version
 
-## For GPU version uncomment the next RUN statement
+## For GPU version uncomment next RUN statement
 # RUN pip3 --timeout=300 --no-cache-dir install torch==1.10.0+cu113 -f https://download.pytorch.org/whl/cu113/torch_stable.html
 
 RUN pip3 --timeout=300 --no-cache-dir install torch==1.10.0+cpu -f https://download.pytorch.org/whl/cpu/torch_stable.html
@@ -55,9 +44,5 @@ WORKDIR /app/
 ENV PYTHONPATH=/app
 RUN ls -lah /app/*
 
-# COPY ./start.sh /start.sh
-# RUN chmod +x /start.sh
-
 EXPOSE 8080
-# CMD ["/start.sh"]
 CMD ["uvicorn", "app:app", "--host", "0.0.0.0", "--port", "8080"]
