--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: '3'
 services:
   backend:
     build: backend/
+    image: danabib/ovw-dogs-backend:latest
     ports: 
       - 8080:8080
     networks:
@@ -11,6 +12,7 @@ services:
 
   frontend:
     build: frontend/
+    image: danabib/ovw-dogs-frontend:latest
     depends_on:
       - backend
     ports: 
