--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,11 @@
 FROM python:3.8-slim
 
+ARG AWS_DEFAULT_REGION
+ENV AWS_DEFAULT_REGION="us-east-1"
+
+ARG AWS_DEFAULT_OUTPUT
+ENV AWS_DEFAULT_OUTPUT="json"
+
 RUN mkdir /frontend
 
 COPY requirements.txt /frontend
@@ -7,6 +13,8 @@ COPY requirements.txt /frontend
 WORKDIR /frontend
 
 RUN pip install -r requirements.txt
+
+RUN pip install awscli --upgrade
 
 COPY . /frontend
 
